Cross-browser: Fix mis-aligned Login and Sign Up buttons.

--- a/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
+++ b/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
@@ -1569,6 +1569,7 @@ object, embed, video, iframe {
                                 border: 0 none;
                                 height: 36px;
                                 float: right;
+                                padding: 0;
                                 margin-top: 2px;
                                 margin-bottom: 5px;
                                 position: relative;
@@ -1577,7 +1578,7 @@ object, embed, video, iframe {
                                 span {
                                     color: white;
                                     display: block;
-                                    height: 100%;
+                                    height: 36px;
                                     font-family: 'proxima-nova';
                                     font-size: 13.39px;
                                     font-weight: 700;
@@ -1585,7 +1586,7 @@ object, embed, video, iframe {
                                     position: absolute;
                                     text-align: center;
                                     top: 0;
-                                    width: 100%;
+                                    width: 116px;
                                 }
 
                                 img {
